[gd_scene load_steps=5 format=3 uid="uid://qbx5cmhsh6nn"]

[ext_resource type="Script" path="res://scenes/ui/player_info.gd" id="1_0se3y"]
[ext_resource type="Shader" path="res://godot_resources/shaders/vhs.gdshader" id="2_cn4o4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tralq"]
shader = ExtResource("2_cn4o4")
shader_parameter/range = 0.05
shader_parameter/noiseQuality = 142.2
shader_parameter/noiseIntensity = 4.65814e-09
shader_parameter/offsetIntensity = 0.03
shader_parameter/colorOffsetIntensity = 1.395

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6kbq"]
bg_color = Color(0.0165001, 0, 0.33, 1)

[node name="PlayerInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0se3y")

[node name="Shader" type="Panel" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_tralq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorBG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m6kbq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 96
text = "sdsdsdsdsdsdsdsdsd"

[node name="AirLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 96
text = "sdsdsdsdsdsdsdsdsd"

[node name="TorpedosLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 96
text = "sdsdsdsdsdsdsdsdsd"

[node name="AfterburnerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 96
text = "sdsdsdsdsdsdsdsdsd"
